# third_modular_robot

./: README.md  install.sh
birl_modular_robot/: CMakeLists.txt  package.xml
birl_modular_robot/data/: 20200108.txt
birl_modular_robot/file/: README.md  eye_hand_calibration_consquence.json  grasp_point_error.txt  pole_position.json
birl_modular_robot/import_file/: positive_and_negetive.txt
birl_modular_robot/msg/: pole_position.msg
birl_modular_robot/script/: biped5d_control.py  biped5d_sent_joint_command.py  find_grasp_point_client.py  inverse_solution_client.py  path_process.py  positive_solution_client.py  robot_increTransTool_client.py  test_pub_pole_position_msg.py
birl_modular_robot/src/: eigen_test.cpp  find_grasp_point.cpp  find_grasp_point.h  find_grasp_point_server.cpp  grasp_intelligent.cpp  grasp_intelligent.h  grasp_point_error.cpp  grasp_point_error.h  inverse_solution_server.cpp  positive_solution_server.cpp  robot_increTransTool_server.cpp  test.cpp
birl_modular_robot/srv/: detection_results.srv  grasp_point.srv  inverse_solution.srv  positive_solution.srv  robot_increTransTool.srv
canopen_communication/modular/: canopen_control_init.py  modular_G100.py  modular_I100.py  modular_I85.py  modular_T100.py  modular_T85.py  modular_joint.py
canopen_communication/scripts/: test.py
kinematics/: Kine.cpp  inverse_solution.cpp  positive_solution.cpp
manual/: manual.doc
ui/: CMakeLists.txt
ui/file/: README.md  robot_state.json
ui/launch/: ui.launch
ui/msg/: robot_command.msg  robot_feedback.msg
ui/path_point_file/: temp.txt  test.txt  test_path.txt  test_path_file.txt
ui/script/: README.md  auto_gripper.py  auto_gripper_func.py  auto_gripper_get_grasp_point_thread.py  auto_gripper_get_pole_point_thread.py  biped_receive_control_command.py  filter.py  (+21 more)
usb-to-can_socketcan/: .cache.mk  .ixx_usb.ko.cmd  .ixx_usb.mod.cmd  .ixx_usb.mod.o.cmd  .ixx_usb.o.cmd  .ixx_usb_core.o.cmd  .ixx_usb_fd.o.cmd  .ixx_usb_v2.o.cmd  ixx_usb.ko  ixx_usb.mod  ixx_usb.mod.c  ixx_usb_core.c  modules.order
(+10 files in other folders)
